# change-control-center-ui

./: .gitignore  AGENTS.md  README.md  app.js  index.html  package-lock.json  pyproject.toml  styles.css
.agents/skills/openspec-change-readiness/: SKILL.md
.agents/skills/repo-onboarding/: SKILL.md
.beads/: metadata.json
.codex/: config.toml
.data/: ccc.db
backend/: AGENTS.md  __init__.py  runtime_contracts.py
backend/app/: __init__.py  config.py  domain.py  main.py  runtime_sidecar_client.py  seeds.py  store.py  ui_delivery.py  ws_hub.py
backend/sidecar/: config.py  main.py  runner.py  session_manager.py
backend/tests/: conftest.py  fake_detached_wrapper.py  fake_health_server.py  fake_stdio_app_server.py  test_agent_onboarding_docs.py  test_api.py  test_launcher_lifecycle.py  test_runtime_adapter.py  test_ui_delivery.py  test_ui_governance.py  test_ui_readiness_gate.py  test_ui_workflow_contract.py  test_web_contract_boundary.py
docs/agent/: index.md  search.md  session-completion.md  ui-skills.md  verification.md
docs/architecture/: overview.md
legacy/: AGENTS.md
legacy/prototype/: README.md
openspec/: project.md
scripts/: AGENTS.md  ccc  check_ui_readiness.py
scripts/lib/ccc/: common.sh  (+4 more)
web/: AGENTS.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
web/e2e/: app.spec.ts  contract-boundary.spec.ts  detail-tables.spec.ts  workflow-boundaries.spec.ts
web/src/: App.tsx  api.ts  lib.ts  styles.css  types.ts
(+253 files in other folders)
