[project]
name = "change-control-center-ui"
version = "0.1.0"
description = "Application foundation for Change Control Center"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.121.0,<1.0.0",
  "uvicorn>=0.38.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "websockets>=15.0.0,<16.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

